Main propre + RSABigInt pour chaine de certificat
J'ai refait le main au propre pour que seul la bonne fonction lié à la signature du certificat soit lancée. pour la chaine de certificat, je suppose que si le premier est RSA les autres le sont aussi.
+
J'ai modifié la fonction RSA pour qu'elle fonctionne aussi pour la chaine de certificat